--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: 窗外蟋蟀
-SEOTitle: 窗外蟋蟀的博客 | Keysaim Blog
+title: 程天爽
+SEOTitle: 程天爽的博客 | daydayfun Blog
 header-img: img/home-bg-hill.jpg
-email: keysaim@gmail.com
+email: daydayfun@no-email.com
 description: "描述"
-keyword: "窗外蟋蟀, keysaim, cdn, docker, go, golang, python, C/C++, 流媒体, 分发网络, 音视频, 编解码"
-url: "https://keysaim.github.io"              # your host, for absolute URL
+keyword: "程天爽, python"
+url: "https://chengtian5huang.github.io"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
 
@@ -13,12 +13,12 @@ baseurl: ""                             # for example, '/blog' if your blog host
 # SNS settings
 RSS: false
 #weibo_username:     keysaim
-zhihu_username:     keysaim
-github_username:    keysaim
+zhihu_username:     清都山水郎
+github_username:    chengtian5huang
 #twitter_username:   keysaim
-jianshu_username:   e413b88a622b
+#jianshu_username:   e413b88a622b
 #facebook_username:  keysaim
-# linkedin_username:  firstname-lastname-idxxxx
+#linkedin_username:  firstname-lastname-idxxxx
 
 
 
