--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ baseurl: ""                             # for example, '/blog' if your blog host
 # SNS settings
 RSS: false
 #weibo_username:     keysaim
-zhihu_username:     清都山水郎
+zhihu_username:     qing-du-shan-shui-lang-55-61
 github_username:    chengtian5huang
 #twitter_username:   keysaim
 #jianshu_username:   e413b88a622b
