--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,10 @@ exclude: ["less","node_modules","Gruntfile.js","package.json","README.md","READM
 
 # Gems
 # from PR#40, to support local preview for Jekyll 3.0
-gems: [jekyll-paginate][jemoji]
+# gems: [jekyll-paginate][jemoji]
+gems:
+ - jekyll-paginate
+ - jemoji
 
 
 
